--- a/cfc/pubspec.yaml
+++ b/cfc/pubspec.yaml
@@ -32,7 +32,9 @@ dependencies:
   flutter:
     sdk: flutter
 
-
+  auto_size_text: ^3.0.0
+  cached_network_image: ^3.0.0
+  carousel_slider:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -60,7 +62,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -75,6 +78,30 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: Santana
+      fonts:
+        - asset: assets/fonts/Santana.ttf
+          weight: 300
+        - asset: assets/fonts/Santana-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Santana-Black.ttf
+          weight: 900
+        - asset: assets/fonts/Santana-Black.ttf
+          weight: 500
+
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins-Regular.ttf
+          weight: 300
+        - asset: assets/fonts/Poppins-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Poppins-Black.ttf
+          weight: 900
+        - asset: assets/fonts/Poppins-Light.ttf
+          weight: 300        
+        - asset: assets/fonts/Poppins-Medium.ttf
+          weight: 600
   # fonts:
   #   - family: Schyler
   #     fonts:
