--- a/cfc/pubspec.yaml
+++ b/cfc/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   auto_size_text: ^3.0.0
   cached_network_image: ^3.0.0
   carousel_slider:
+  flutter_svg: ^0.19.3
+  get: ^3.26.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -102,6 +104,16 @@ flutter:
           weight: 300        
         - asset: assets/fonts/Poppins-Medium.ttf
           weight: 600
+          
+    - family: Raleway
+      fonts:
+        - asset: assets/fonts/Raleway/Raleway-Regular.ttf
+        - asset: assets/fonts/Raleway/Raleway-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Raleway/Raleway-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/Raleway/Raleway-Bold.ttf
+          weight: 700
   # fonts:
   #   - family: Schyler
   #     fonts:
