--- a/cfc/pubspec.yaml
+++ b/cfc/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   carousel_slider:
   flutter_svg: ^0.19.3
   get: ^3.26.0
+  fl_chart: ^0.35.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
